--- a/data/css/AMOLED.qss
+++ b/data/css/AMOLED.qss
@@ -4,7 +4,23 @@ Author: Jaime A. Quiroga P.
 Company: GTRONICK
 Last updated: 15/10/2019, 11:40.
 Available at: https://github.com/GTRONICK/QSS/blob/master/AMOLED.qss
+
+- modified by fransh for amphetype, 2021-02-05
 */
+
+
+QHeaderView,QGraphicsView {
+	selection-background-color:#000000;
+	background-color:#2e2d33;
+	color: #a9b7c6;
+}
+
+QTreeView,QListView {
+	selection-background-color:#000000;
+	background-color:#1e1d23;
+	color: #a9b7c6;
+}
+
 QMainWindow {
 	background-color:#000000;
 }
@@ -59,7 +75,7 @@ QPushButton:hover{
 	border-left-color: transparent;
 	border-bottom-color: #e67e22;
 	border-bottom-width: 1px;
-	border-bottom-radius: 6px;
+	border-bottom-right-radius: 6px; border-bottom-left-radius: 6px;
 	border-style: solid;
 	color: #FFFFFF;
 	padding-bottom: 2px;
@@ -72,7 +88,7 @@ QPushButton:pressed{
 	border-left-color: transparent;
 	border-bottom-color: #e67e22;
 	border-bottom-width: 2px;
-	border-bottom-radius: 6px;
+	border-bottom-right-radius: 6px; border-bottom-left-radius: 6px;
 	border-style: solid;
 	color: #e67e22;
 	padding-bottom: 1px;
@@ -85,7 +101,7 @@ QPushButton:disabled{
 	border-left-color: transparent;
 	border-bottom-color: transparent;
 	border-bottom-width: 2px;
-	border-bottom-radius: 6px;
+	border-bottom-right-radius: 6px; border-bottom-left-radius: 6px;
 	border-style: solid;
 	color: #808086;
 	padding-bottom: 1px;
@@ -110,7 +126,7 @@ QToolButton:hover{
 	border-left-color: transparent;
 	border-bottom-color: #e67e22;
 	border-bottom-width: 2px;
-	border-bottom-radius: 6px;
+	border-bottom-right-radius: 6px; border-bottom-left-radius: 6px;
 	border-style: solid;
 	color: #FFFFFF;
 	padding-bottom: 1px;
@@ -164,7 +180,7 @@ QMenuBar::item:selected {
 	border-left-color: transparent;
 	border-bottom-color: #e67e22;
 	border-bottom-width: 1px;
-	border-bottom-radius: 6px;
+	border-bottom-right-radius: 6px; border-bottom-left-radius: 6px;
 	border-style: solid;
 	color: #FFFFFF;
 	padding-bottom: 0px;
