--- a/data/css/ElegantDark.qss
+++ b/data/css/ElegantDark.qss
@@ -4,7 +4,17 @@ Author: Jaime A. Quiroga P.
 Company: GTRONICK
 Last updated: 17/04/2018
 Available at: https://github.com/GTRONICK/QSS/blob/master/ElegantDark.qss
+
+- modified by fransh for amphetype, 2021-02-05
 */
+
+QWidget {
+	color: rgb(255, 255, 255);
+	background:rgb(80, 80, 80);
+	selection-background-color: rgb(187, 187, 187);
+	selection-color: rgb(60, 63, 65);
+}
+
 QMainWindow {
 	background-color:rgb(82, 82, 82);
 }
