--- a/data/css/MacOS.qss
+++ b/data/css/MacOS.qss
@@ -4,7 +4,14 @@
  * Company: GTRONICK
  * Last updated: 25/12/2020, 23:10.
  * Available at: https://github.com/GTRONICK/QSS/blob/master/MacOS.qss
+ 
+- modified by fransh for amphetype, 2021-02-05
  */
+
+QTreeView,QListView {
+    background-color: #f4f4f4;
+}
+
 QMainWindow {
     background-color:#ececec;
 }
@@ -190,7 +197,7 @@ QComboBox, QFontComboBox {
     padding-left: 5px;
 }
 QComboBox:editable, QComboBox:!editable, QComboBox::drop-down:editable, QComboBox:!editable:on, QComboBox::drop-down:editable:on {
-    background: #ffff;
+    background: #ffffff;
 }
 QComboBox::drop-down {
     subcontrol-origin: padding;
